# pyopenapi

./: .gitignore  LICENSE  MANIFEST.in  README.md  check.bat  check.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
examples/: index.html
examples/json/: index.html  openapi.json
examples/python/: index.html  openapi.py
examples/yaml/: index.html  openapi.yaml
pyopenapi/: __init__.py  decorators.py  generator.py  metadata.py  operations.py  options.py  proxy.py  specification.py  template.html  utility.py
tests/: .gitignore  endpoint.md  endpoint.py  test_openapi.py  test_proxy.py
