[metadata]
name = python-openapi
version = attr: pyopenapi.__version__
description = Generate an OpenAPI specification from a Python class definition
author = Levente Hunyadi
author_email = hunyadi@gmail.com
url = https://github.com/hunyadi/pyopenapi
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    aiohttp >= 3.8
    json_strong_typing >= 0.2.2

[options.packages.find]
exclude =
    tests*

[options.package_data]
pyopenapi = *.html
